# fastApi_Durger

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  entrypoint.sh  pyproject.toml  requirements.txt  sqlite.db  test_main.http
api/: __init__.py  bot.py  bot_proactive.py  root.py
config/: conf.py
db/: engine.py
db/migrations/: env.py
ms_bot/: bot_init.py  proactive_bot_init.py
ms_bot/adapter/: adapter_with_error_handler.py  standalone_bot_adapter.py
ms_bot/bots/: dialog_bot.py  proactive_bot.py
ms_bot/bots_models/: __init__.py  models.py
ms_bot/dialogs/: __init__.py  bolnichyi_dialog.py  grafik_dialog.py  login_parol_dialog.py  main_dialog.py  ocenka_celi_dialog.py  otpusk_dialog.py  raschetnyi_list_dialog.py  spravka_dialog.py  spravka_dohod_dialog.py
ms_bot/helpers/: __init__.py  dialog_helper.py  hero_card_helper.py  speech_recognition.py  telegram_helper.py
ms_bot/lib/: messages.py  storage_blob_helper.py
schemas/: __init__.py
setup/: aioredis_client.py  db.py  logger.py  redis_client.py
templates/: index.html
